Bug 353852 - Session does not save code folding while using split views
Summary: Session does not save code folding while using split views
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 344504 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-13 09:21 UTC by Ashwin
Modified: 2016-06-17 17:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ashwin 2015-10-13 09:21:45 UTC
In a python project that I am working on while using split views and the code folding feature, in spite of saving the session...  when I close and reopen Kate, the folded code blocks unfolds automatically.

It seems like this information is lost while  saving the session.

Reproducible: Always

Steps to Reproduce:
1. Use Kate 15.08.1 and open a python file (optional, probably)
2. Split view vertically & use code folding for a couple of code blocks
3. Save session
4. Reopen Kate

Actual Results:  
Folded code blocks unfolds.

Expected Results:  
Folded code blocks should remain folded after saving the session.
Comment 1 Dominik Haumann 2016-06-12 18:23:31 UTC
*** Bug 344504 has been marked as a duplicate of this bug. ***
Comment 2 Dominik Haumann 2016-06-12 18:28:44 UTC
Git commit f4b885a89869abb96e1e536c769f396d2372c527 by Dominik Haumann.
Committed on 12/06/2016 at 18:28.
Pushed by dhaumann into branch 'Applications/16.04'.

Correctly restore view config of all split views
REVIEW: 128163

M  +3    -3    kate/kateviewmanager.cpp
M  +3    -2    kate/kateviewmanager.h
M  +4    -3    kate/kateviewspace.cpp

http://commits.kde.org/kate/f4b885a89869abb96e1e536c769f396d2372c527
Comment 3 Dominik Haumann 2016-06-12 18:29:36 UTC
Git commit ced09c823aa5832ea5e56c5708a564a9767a225d by Dominik Haumann.
Committed on 12/06/2016 at 18:29.
Pushed by dhaumann into branch 'Applications/15.12'.

Correctly restore view config of all split views
REVIEW: 128163

M  +3    -3    kate/kateviewmanager.cpp
M  +3    -2    kate/kateviewmanager.h
M  +4    -3    kate/kateviewspace.cpp

http://commits.kde.org/kate/ced09c823aa5832ea5e56c5708a564a9767a225d
Comment 4 Dominik Haumann 2016-06-12 18:33:58 UTC
Git commit 52722e588f46a32b480b5f304ba21480fc8234b1 by Dominik Haumann.
Committed on 12/06/2016 at 18:30.
Pushed by dhaumann into branch 'Applications/15.08'.

Correctly restore view config of all split views
REVIEW: 128163

M  +3    -3    kate/src/kateviewmanager.cpp
M  +3    -2    kate/src/kateviewmanager.h
M  +4    -3    kate/src/kateviewspace.cpp

http://commits.kde.org/kate/52722e588f46a32b480b5f304ba21480fc8234b1