Correctly restore view config of all split views

BUG: 353852
REVIEW: 128163